workshop04/wp-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: wp-svc
spec:
  type: LoadBalancer
  selector:
    app: wordpress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
