workshop04/wp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      name: wordpress_pod
      labels:
        name: wordpress_pod
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:latest
          ports:
          - containerPort: 80
            name: wordpress
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-volume
---
apiVersion: v1 
kind: Service 
metadata:
  name: wp-svc 
  labels:
    name: wp-svc
spec:
  type: ClusterIP
  selector:
    name: wordpress_pod
  ports:
  - port: 80
    targetPort: wordpress
